force-app/main/default/objects/Knowledge_Collection_Association__c/Knowledge_Collection_Association__c.object-meta.xml
<CustomObject>
    <description>Junction object for linking Knowledge articles with Curated Collections</description>
    <label>Knowledge Collection Association</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Collection Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>