force-app/main/default/objects/Knowledge_Collection_Association__c/fields/Article_Product__c.field-meta.xml
<CustomField>
    <fullName>Article_Product__c</fullName>
    <formula>TEXT(Knowledge_Article__r.Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Product</label>
    <type>Text</type>
</CustomField>