force-app/main/default/objects/Knowledge_Collection_Association__c/fields/Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Article_Title__c</fullName>
    <formula>Knowledge_Article__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Title</label>
    <type>Text</type>
</CustomField>