force-app/main/default/objects/Knowledge_Collection_Association__c/fields/Curated_Collection__c.field-meta.xml
<CustomField>
    <fullName>Curated_Collection__c</fullName>
    <label>Curated Collection</label>
    <referenceTo>Curated_Collection__c</referenceTo>
    <relationshipLabel>Knowledge Articles</relationshipLabel>
    <relationshipName>Knowledge_Collection_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>