force-app/main/default/objects/Knowledge_Collection_Association__c/fields/Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article__c</fullName>
    <label>Knowledge Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Curated Collections</relationshipLabel>
    <relationshipName>Knowledge_Collection_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>