force-app/main/default/objects/Knowledge_Collection_Association__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Set the priority order of the article in this collection</description>
    <inlineHelpText>Set the priority order of the article in this collection</inlineHelpText>
    <label>Priority</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>