force-app/main/default/objects/Knowledge_Collection_Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Curated_Collection__c</columns>
    <columns>Knowledge_Article__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>